Eliminacion de carpetas 2-5

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-./output/
+/mnt/data/dortega/vcabrera/output/2
+/mnt/data/dortega/vcabrera/output/3
+/mnt/data/dortega/vcabrera/output/4
+/mnt/data/dortega/vcabrera/output/5
+
