--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-/mnt/data/dortega/vcabrera/output/2
-/mnt/data/dortega/vcabrera/output/3
-/mnt/data/dortega/vcabrera/output/4
-/mnt/data/dortega/vcabrera/output/5
-
+output/
